# Akilli-Tarim-Yonetim-Sistemi

./: .env.example  .gitignore  ALGORİTMA_TASARIMI.md  ATYS_Gereksinim_Dokumani.docx  CLAUDE.md  Final Sunum Hazırlığı.pptx  Geliştirme Ortamı Kurulumu  Geliştirme Ortamı Kurulumu.docx  MODEL_ACIKLANABILIRLIGI.md  Model Entegrasyonu.pptx  Model Validasyonu (Çapraz Doğrulama).pptx  Proje Yönetim Aracı Kurulumu ve Konfigürasyonu.pptx  README.md  SISTEM_GEREKSINIMLERI.txt  SONUC_RAPORU.md  TODO.md  VERI_SETI.md  Veri Toplama ve Analiz Modülü Tasarımı.pptx  baslat.bat  db.sqlite3  docker-compose.yml  mqtt_demo.py  package-lock.json  package.json  projeakisi.md  requirements.txt  Özellik Mühendisliği Araştırması.pptx
backend/: Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/audit/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/commands/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/devices/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/exports/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/farms/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/fertilization/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/mqtt_worker/: runner.py  validator.py
backend/apps/notifications/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/predictions/: admin.py  (+4 more)
backend/config/: asgi.py  celery.py  urls.py
backend/tests/: conftest.py  test_auth.py  test_permissions.py  test_rules.py
simulator/: Dockerfile  config.yaml  pyproject.toml  simulator.py
(+118 files in other folders)
