[tool.poetry]
name = "akilli-tarim-simulator"
version = "0.1.0"
description = "Akıllı Tarım Yönetim Sistemi sensör simülatörü"
authors = ["Muhammed Cengiz"]

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = "^2.1.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
